# ru_budget_tracker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml.j2  pyproject.toml
.github/workflows/: build-docker-image.yaml  build-docker-image.yml  deployment-pipeline.yaml
src/: alembic.ini  app.py  settings.py
src/alembic/: README.md  env.py  script.py.mako
src/alembic/versions/: 0001_initial_setup.py  0002_update_unique_constraint_dimension.py  2ad7ff7d9ff8_change_dimension_unique_constraint_to_.py  7f4d8a31543d_change_dimension_unique_constraint_to_.py  dd9af3d85bf8_add_budget_id_to_dimensions.py  fb88575a7e86_add_dimensions_relationship_to_budget.py
src/assets/: about.css  clientside.js  menu.css  typography.css
src/assets/icons/: README.md
src/data/import_files/: Readme.md
src/data/import_files/conversion_tables/ppp/: ppp.csv
src/database/: README.md  __init__.py  sessions.py
src/models/: README.md  __init__.py  base.py  budget.py  conversion_rate.py
src/pages/: about.py  barchart.py  context.py  timeseries.py  treemap.py
src/scripts/: README.md  example_import_script.py  fix_corrupt_excel_files.py  import.py  parse_budget.py  parse_dimensions.py  sanity_check.py  test.py  translations.py
src/scripts/mock_data/: populate_database.py
src/scripts/parsers/: __init__.py  gdp_parser.py  helpers.py  law_parser.py  ppp_parser.py  report_parser.py  totals_parser.py
src/scripts/transform_treemap/: transform.py
src/utils/: __init__.py  calculate.py  definitions.py  fetch.py  helper.py  transform.py
(+1 files in other folders)
